# Zetabotix-robotics

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ROADMAP.md
src/robo_lint/: __init__.py  analyzer.py  checks.py  cli.py  loaders.py  report.py  schema.py
tests/: test_checks.py  test_cli.py  test_loaders.py
