[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robo-lint"
version = "0.0.1"
description = "Pre-training data diagnostics for robot learning datasets"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "pyarrow",
    "huggingface_hub",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
robo-lint = "robo_lint.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
